CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(CMS_ASN)

ADD_LIBRARY(CMS_ASN STATIC
	src/AAControls.c
	src/AccessDescription.c
	src/ACClearAttrs.c
	src/AdministrationDomainName.c
	src/AlgorithmIdentifier.c
	src/AnotherName.c
	src/ANY.c
	src/asn_codecs_prim.c
	src/asn_SEQUENCE_OF.c
	src/asn_SET_OF.c
	src/AttCertIssuer.c
	src/AttCertValidityPeriod.c
	src/AttCertVersion.c
	src/AttCertVersionV1.c
	src/Attribute.c
	src/AttributeCertificate.c
	src/AttributeCertificateInfo.c
	src/AttributeCertificateInfoV1.c
	src/AttributeCertificateV1.c
	src/AttributeCertificateV2.c
	src/AttributeTypeAndValue.c
	src/AttributeType.c
	src/AttributeValue.c
	src/AttrSpec.c
	src/AuthAttributes.c
	src/AuthenticatedData.c
	src/AuthorityInfoAccessSyntax.c
	src/AuthorityKeyIdentifier.c
	src/BaseCRLNumber.c
	src/BaseDistance.c
	src/BasicConstraints.c
	src/ber_decoder.c
	src/ber_tlv_length.c
	src/ber_tlv_tag.c
	src/BIT_STRING.c
	src/BMPString.c
	src/BOOLEAN.c
	src/BuiltInDomainDefinedAttribute.c
	src/BuiltInDomainDefinedAttributes.c
	src/BuiltInStandardAttributes.c
	src/Certificate.c
	src/CertificateChoices.c
	src/CertificateIssuer.c
	src/CertificateList.c
	src/CertificatePolicies.c
	src/CertificateSerialNumber.c
	src/CertificateSet.c
	src/CertPolicyId.c
	src/ClassList.c
	src/Clearance.c
	src/CMSVersion.c
	src/CommonName.c
	src/constraints.c
	src/constr_CHOICE.c
	src/constr_SEQUENCE.c
	src/constr_SEQUENCE_OF.c
	src/constr_SET.c
	src/constr_SET_OF.c
	src/constr_TYPE.c
	src/ContentEncryptionAlgorithmIdentifier.c
	src/ContentInfo.c
	src/ContentType.c
	src/Countersignature.c
	src/CountryName.c
	src/CPSuri.c
	src/CRLDistributionPoints.c
	src/CRLNumber.c
	src/CRLReason.c
	src/der_encoder.c
	src/DigestAlgorithmIdentifier.c
	src/DigestAlgorithmIdentifiers.c
	src/Digest.c
	src/DigestedData.c
	src/DirectoryString.c
	src/DisplayText.c
	src/DistinguishedName.c
	src/DistributionPoint.c
	src/DistributionPointName.c
	src/DomainComponent.c
	src/EDIPartyName.c
	src/EmailAddress.c
	src/EncapsulatedContentInfo.c
	src/EncryptedContent.c
	src/EncryptedContentInfo.c
	src/EncryptedData.c
	src/EncryptedKey.c
	src/ENUMERATED.c
	src/EnvelopedData.c
	src/ExtendedCertificate.c
	src/ExtendedCertificateInfo.c
	src/ExtendedCertificateOrCertificate.c
	src/ExtendedNetworkAddress.c
	src/ExtensionAttribute.c
	src/ExtensionAttributes.c
	src/Extension.c
	src/ExtensionORAddressComponents.c
	src/ExtensionPhysicalDeliveryAddressComponents.c
	src/Extensions.c
	src/ExtKeyUsageSyntax.c
	src/FreshestCRL.c
	src/GeneralizedTime.c
	src/GeneralName.c
	src/GeneralNames.c
	src/GeneralSubtree.c
	src/GeneralSubtrees.c
	src/Holder.c
	src/HoldInstructionCode.c
	src/IA5String.c
	src/IetfAttrSyntax.c
	src/InhibitAnyPolicy.c
	src/INTEGER.c
	src/InvalidityDate.c
	src/IssuerAltName.c
	src/IssuerAndSerialNumber.c
	src/IssuerSerial.c
	src/IssuingDistributionPoint.c
	src/KEKIdentifier.c
	src/KEKRecipientInfo.c
	src/KeyAgreeRecipientIdentifier.c
	src/KeyAgreeRecipientInfo.c
	src/KeyDerivationAlgorithmIdentifier.c
	src/KeyEncryptionAlgorithmIdentifier.c
	src/KeyIdentifier.c
	src/KeyPurposeId.c
	src/KeyTransRecipientInfo.c
	src/KeyUsage.c
	src/LocalPostalAttributes.c
	src/MessageAuthenticationCodeAlgorithm.c
	src/MessageAuthenticationCode.c
	src/MessageDigest.c
	src/Name.c
	src/NameConstraints.c
	src/NativeEnumerated.c
	src/NativeInteger.c
	src/NetworkAddress.c
	src/NoticeReference.c
	src/NumericString.c
	src/NumericUserIdentifier.c
	src/ObjectDigestInfo.c
	src/OBJECT_IDENTIFIER.c
	src/OCTET_STRING.c
	src/ORAddress.c
	src/OrganizationalUnitName.c
	src/OrganizationalUnitNames.c
	src/OrganizationName.c
	src/OriginatorIdentifierOrKey.c
	src/OriginatorInfo.c
	src/OriginatorPublicKey.c
	src/OtherCertificateFormat.c
	src/OtherKeyAttribute.c
	src/OtherRecipientInfo.c
	src/OtherRevocationInfoFormat.c
	src/PasswordRecipientInfo.c
	src/PDSName.c
	src/PDSParameter.c
	src/per_decoder.c
	src/per_encoder.c
	src/per_opentype.c
	src/PersonalName.c
	src/per_support.c
	src/PhysicalDeliveryCountryName.c
	src/PhysicalDeliveryOfficeName.c
	src/PhysicalDeliveryOfficeNumber.c
	src/PhysicalDeliveryOrganizationName.c
	src/PhysicalDeliveryPersonalName.c
	src/PolicyConstraints.c
	src/PolicyInformation.c
	src/PolicyMappings.c
	src/PolicyQualifierId.c
	src/PolicyQualifierInfo.c
	src/PostalCode.c
	src/PosteRestanteAddress.c
	src/PostOfficeBoxAddress.c
	src/PresentationAddress.c
	src/PrintableString.c
	src/PrivateDomainName.c
	src/PrivateKeyUsagePeriod.c
	src/ProxyInfo.c
	src/RDNSequence.c
	src/ReasonFlags.c
	src/RecipientEncryptedKey.c
	src/RecipientEncryptedKeys.c
	src/RecipientIdentifier.c
	src/RecipientInfo.c
	src/RecipientInfos.c
	src/RecipientKeyIdentifier.c
	src/RelativeDistinguishedName.c
	src/RevocationInfoChoice.c
	src/RevocationInfoChoices.c
	src/RoleSyntax.c
	src/SecurityCategory.c
	src/SignatureAlgorithmIdentifier.c
	src/Signature.c
	src/SignatureValue.c
	src/SignedAttributes.c
	src/SignedData.c
	src/SignerIdentifier.c
	src/SignerInfo.c
	src/SignerInfos.c
	src/SigningTime.c
	src/SkipCerts.c
	src/StreetAddress.c
	src/SubjectAltName.c
	src/SubjectDirectoryAttributes.c
	src/SubjectInfoAccessSyntax.c
	src/SubjectKeyIdentifier.c
	src/SubjectPublicKeyInfo.c
	src/SvceAuthInfo.c
	src/Target.c
	src/TargetCert.c
	src/Targets.c
	src/TBSCertificate.c
	src/TBSCertList.c
	src/TeletexCommonName.c
	src/TeletexDomainDefinedAttribute.c
	src/TeletexDomainDefinedAttributes.c
	src/TeletexOrganizationalUnitName.c
	src/TeletexOrganizationalUnitNames.c
	src/TeletexOrganizationName.c
	src/TeletexPersonalName.c
	src/TeletexString.c
	src/TerminalIdentifier.c
	src/TerminalType.c
	src/Time.c
	src/UnauthAttributes.c
	src/UnformattedPostalAddress.c
	src/UniqueIdentifier.c
	src/UniquePostalName.c
	src/UniversalString.c
	src/UnprotectedAttributes.c
	src/UnsignedAttributes.c
	src/UserKeyingMaterial.c
	src/UserNotice.c
	src/UTCTime.c
	src/UTF8String.c
	src/V2Form.c
	src/Validity.c
	src/Version.c
	src/VisibleString.c
	src/X121Address.c
	src/X520CommonName.c
	src/X520countryName.c
	src/X520dnQualifier.c
	src/X520LocalityName.c
	src/X520name.c
	src/X520OrganizationalUnitName.c
	src/X520OrganizationName.c
	src/X520Pseudonym.c
	src/X520SerialNumber.c
	src/X520StateOrProvinceName.c
	src/X520Title.c
	src/xer_decoder.c
	src/xer_encoder.c
	src/xer_support.c
)

TARGET_COMPILE_OPTIONS(CMS_ASN PUBLIC
	$<$<CONFIG:Debug>:-w -ggdb -O0>
	$<$<NOT:$<CONFIG:Debug>>:-w -g0 -O2>
)

TARGET_COMPILE_DEFINITIONS(CMS_ASN PRIVATE
	PDU=ContentInfo
)

TARGET_INCLUDE_DIRECTORIES(CMS_ASN PUBLIC
	include/cms
)
